--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "lint": "prettier --write ."
+    "start": "babel-node src/index.js",
+    "lint": "prettier --write .",
+    "dev":  "env-cmd -f .env nodemon --watch src --exec babel-node src/index.js"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/node": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "nodemon": "^2.0.19",
