--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "nodemon": "^2.0.19",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "uuid": "^8.3.2"
   }
 }
