--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@babel/core": "^7.18.9",
     "@babel/node": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
-    "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "nodemon": "^2.0.19",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "uuid": "^8.3.2"
   }
 }
