--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "env-cmd -f .env babel-node src/index.js",
     "lint": "prettier --write .",
-    "dev": "env-cmd -f .env nodemon --watch src --exec babel-node src/index.js"
+    "dev": "env-cmd -f .env nodemon --watch src --exec babel-node src/index.js",
+    "test": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +23,14 @@
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@babel/register": "^7.18.9",
+    "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
+    "mocha": "^10.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^15.1.0",
+    "supertest": "^6.2.4"
   }
 }
