--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f .env babel-node src/index.js",
+    "start": "babel-node src/index.js",
     "lint": "prettier --write .",
     "dev": "env-cmd -f .env nodemon --watch src --exec babel-node src/index.js",
     "test": "nyc mocha"
